--- a/estilos/galeria.css
+++ b/estilos/galeria.css
@@ -49,3 +49,48 @@ header {
 }
 
 /*LO DEMAS*/
+.awards-section {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.awards-section h2, .awards-section h3 {
+    font-size: 2rem;
+    color: #ff4081;
+    margin-bottom: 20px;
+}
+
+.award {
+    background-color: #333;
+    border: 2px solid #ff4081;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+    transition: all 0.3s ease-in-out;
+    color: #fff;
+}
+
+.award:hover {
+    background-color: #ff4081;
+}
+
+.award h3, .award h4 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: #fff;
+}
+
+.award p {
+    font-size: 1rem;
+    color: #fff;
+}
+
+.award strong {
+    font-weight: bold;
+    color: #ff4081;
+}
