--- a/estilos/premios.css
+++ b/estilos/premios.css
@@ -53,7 +53,6 @@ header {
     width: 80%;
     margin: 0 auto;
     text-align: center;
-    
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -76,7 +75,8 @@ header {
 }
 
 .award:hover {
-    background-color: #ff4081;
+
+    transform: scale(1.05); 
 }
 
 .award h3, .award h4 {
